Bug 1771060: Make use of the line cursor in IsLocalAccAtLineStart to improve performance. r=jfkthame

For block frames, nsLineIterator doesn't use the line cursor, so switch to nsBlockInFlowLineIterator.
We don't actually care about the line number here anyway.

Differential Revision: https://phabricator.services.mozilla.com/D147237